--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -16,3 +16,9 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
+  other-job:
+    runs-on: ubuntu-latest
+    needs: [Explore-GitHub-Actions]
+    steps:
+        - run: echo "result action= ${{needs.Explore-GitHub-Actions.result}}"
